[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/tabs/dashboard_tab.gd" id="1"]

[node name="DashboardTab" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="BalanceCard" type="PanelContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/VBox/BalanceCard"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="ScrollContainer/VBox/BalanceCard/VBox"]
layout_mode = 2
text = "BALANCE"
theme_override_font_sizes/font_size = 14

[node name="MoneyLabel" type="Label" parent="ScrollContainer/VBox/BalanceCard/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "$10,000"
theme_override_font_sizes/font_size = 32

[node name="ResourcesCard" type="PanelContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/VBox/ResourcesCard"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="ScrollContainer/VBox/ResourcesCard/VBox"]
layout_mode = 2
text = "STOCKPILE"
theme_override_font_sizes/font_size = 14

[node name="ResourcesList" type="VBoxContainer" parent="ScrollContainer/VBox/ResourcesCard/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="MissionsCard" type="PanelContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/VBox/MissionsCard"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="ScrollContainer/VBox/MissionsCard/VBox"]
layout_mode = 2
text = "ACTIVE MISSIONS"
theme_override_font_sizes/font_size = 14

[node name="MissionsList" type="VBoxContainer" parent="ScrollContainer/VBox/MissionsCard/VBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="WorkersCard" type="PanelContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/VBox/WorkersCard"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="ScrollContainer/VBox/WorkersCard/VBox"]
layout_mode = 2
text = "WORKFORCE"
theme_override_font_sizes/font_size = 14

[node name="WorkersSummary" type="Label" parent="ScrollContainer/VBox/WorkersCard/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0 workers (0 available)"

[node name="AlertsCard" type="PanelContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/VBox/AlertsCard"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="ScrollContainer/VBox/AlertsCard/VBox"]
layout_mode = 2
text = "ALERTS"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)

[node name="AlertsScroll" type="ScrollContainer" parent="ScrollContainer/VBox/AlertsCard/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
size_flags_vertical = 1
horizontal_scroll_mode = 0

[node name="AlertsList" type="VBoxContainer" parent="ScrollContainer/VBox/AlertsCard/VBox/AlertsScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ActivityCard" type="PanelContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/VBox/ActivityCard"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="ScrollContainer/VBox/ActivityCard/VBox"]
layout_mode = 2
text = "ACTIVITY"
theme_override_font_sizes/font_size = 14

[node name="ActivityScroll" type="ScrollContainer" parent="ScrollContainer/VBox/ActivityCard/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 120)
size_flags_vertical = 1
horizontal_scroll_mode = 0

[node name="ActivityList" type="VBoxContainer" parent="ScrollContainer/VBox/ActivityCard/VBox/ActivityScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ContractsCard" type="PanelContainer" parent="ScrollContainer/VBox"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="ScrollContainer/VBox/ContractsCard"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="ScrollContainer/VBox/ContractsCard/VBox"]
layout_mode = 2
text = "CONTRACTS"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.3, 0.8, 1.0, 1)

[node name="ContractsScroll" type="ScrollContainer" parent="ScrollContainer/VBox/ContractsCard/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 60)
size_flags_vertical = 1
horizontal_scroll_mode = 0

[node name="ContractsList" type="VBoxContainer" parent="ScrollContainer/VBox/ContractsCard/VBox/ContractsScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
